2004-05-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fill_score_list): Calculate times for the score 
	list correctly. The scores are not in hundredths of a second, 
	they are a decimal number of the form: minutes.seconds. Fixes
	bug #142716.

2004-05-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (show_scores): Further tweaks to the scores dialog.

2004-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Implemented the new scores dialog.

2004-04-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (about): Fix up the credits to include Richard's and
	Steve's contributions.

2004-03-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c:
	* minefield.c:	
	* minefield.h: Add a "hint_used" signal to the minefield widget so
	that we can adjust the score before a potential win. This is the
	fix for bug #136207 which does the least damage to the program
	model.

2004-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c: Explicitly use cell_idx rather than the explicit
	conversion functions. Added some warnings to try and pick up on
	#119043.

2004-03-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Drawing fixes. A patch thanks to
	ed@catmur.co.uk (bug #135615). Also removed some redundant code.
	(gtk_minefield_multi_release): Fixed the long-standing "incorrect
	counts" bug (#103125), multi release wasn't checking whether the
	mines were shown or not.	
	(gtk_mine_draw): Solved a drawing problem where the cleared mines
	weren't being drawn if they were auto-cleared. The gorilla theme
	really higlighted this.
	(gtk_mine_draw): Add a warning to guard against a bug I suspect is
	still there.

2004-02-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_setup_numbers): Dynamically adjust
	the font size to take care of whatever scaling pango is using
	today. This is otherwise known as "an ugly hack".
