@@ -1,3 +1,9 @@
+2004-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* minefield.c:
+	* minefield.h: Draw the "wrong flag" cross in a scalable 
+	manner.
+
 2004-05-19  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnomine.c (fill_score_list): Calculate times for the score 
